2008-03-23  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Fix for bug reported by Florian Nigsch.
	The Python iterators didn't correctly handle the case where there was
	nothing to iterate over.

2008-03-22 Chris Morley

	* src/builder.cpp: Slightly cleaner version of yesterdays's change.
	Load data when _fragments is empty.

	* src/formats/gausscubeformat.cpp, src/formats/gausszmatformat.cpp,
	src/formats/mmcifformat.cpp, src/formats/moldenformat.cpp,
	src/formats/msmsformat.cpp:
	Add some flags for Read or Write only, remove duplicate registration
	statements(IDs are not case sensitive), edit Description so options
	appear properly in GUI.
	
	* src/formats/acrformat.cpp, src/formats/chemdrawcdx.cpp,
	src/formats/qchemformat.cpp, src/formats/xml/cdxmlformat.cpp,
	src/formats/mopacformat.cpp, src/formats/msiformat.cpp: 
	Reduce compiler warnings by commenting out unused variables.
	
	* src/obutil.cpp: Remove OBAPI from definitions; only needed in 
	declarations

	* src/ops/gen3d.cpp: Remove error wrap statements (no cerr calls in
	OBBuilder now)
	
	* src/plugin.cpp(Display): remove tab character which was giving error
	messages in wxWidgets menus.
	* windows-vc2005/OBPythonOBF: New project to build Python for OBF
	(multi-DLL) build.
	
	Update Windows OBF build files.

2008-03-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Move GetGrid to
	OBForceField to implement it for all force fields at once.

	* src/forcefields/forcefieldmmff94.*: Remove GetGrid.

	* tools/obprobe.cpp: Implement the obprobe program.

2008-03-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp,
	src/forcefields/forcefieldmmff94.*: Add GetGrid probe method.

	* tools/Makefile.*, tools/obprobe.cpp: Add obprobe tool, still needs
	to be implemented. (copied from obenergy)

	* tools/obminimize.cpp: Don't call ValidateGradients before